[package]
name = "pcs_cli"
version = "0.1.0"
edition = "2024"
authors = ["Shua-github <CHA_shua@outlook.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
redb = "4"
pcs_core = {path = "../pcs_core"}
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
getrandom = "0.2"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
futures = "0.3"
http = "1"
bytes = "1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2.17"
http-body = "1"
http-body-util = "0.1"
