[package]
name = "pcs_core"
version = "0.1.0"
edition = "2024"
authors = ["Shua-github <CHA_shua@outlook.com>"]
license = "MIT"

[lib]

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["alloc","serde"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
send-future = "0.1"
trait-variant = "0.1"
# extensions-save start
aes = {version = "0.8", optional = true}
cbc = {version = "0.1", optional = true}
shua_zip = {version = "0.1.1", optional = true}
phi_save_codec ={ version = "0.4", optional = true}
md-5 = { version = "0.11", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true, features = ["alloc"] }
# extensions-save end

[features]
default = ["extensions"]
extensions = ["extension_save"]
extension_save = ["aes","cbc","shua_zip","phi_save_codec","md-5","hex"]