[package]
name = "pcs_worker"
version = "0.1.0"
edition = "2024"
authors = ["Shua-github <CHA_shua@outlook.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8" }
pcs_core = { path = "../pcs_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trait-variant = "0.1"
bytes = "1"
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }